# can-cube-sat-2022

./: .gitmodules  git-filter-repo.txt
construction/3Dmodel_Spacecraft/: a1_without_logo.frm  a4spec_1_z_without_logo.frm  adapter.prt  air-valve.prt  ark-pcb.prt  ark.asm  barometr-ms5611.prt  battery_pcb-bms.prt  bku-pcb.prt  bku.asm  bme280_module.prt  bottom-camera-kron.prt  bsk1-pcb-main.prt  bsk1.asm  bsk2-pcb-main.prt  bsk2.asm  bsk3-pcb-main.prt  bsk3.asm  bsk4-pcb-main.prt  bsk4.asm  bsk5.asm  bsk5_pcb-main.prt  bsk_inter-plata.prt  (+97 more)
schematics/: DESCRIPTION
src/board/BCS/components/radio/: CMakeLists.txt
src/board/BCS/components/radio/Inc/: radio.h  ring_buffer.h
src/board/BCS/components/radio/Inc_private/: radio_help.h  timing_calc.h
src/board/BCS/components/radio/Src/: radio_help.c  ring_buffer.c  send.c  timing_calc.c
src/research/ccsds-even-better/: CMakeLists.txt  buffer.h  ccscds_endian.h  endian2.h  epp_empty.h  fifo.h  main.c  map.h  mc.h  pc.h  pc_generate.c  pc_generate.h  recieve.h  sap.h  sep.h  uslp_init.h  uslp_mx.h  uslp_simple_init.h  uslp_socket.h  uslp_types.h  vc.h  vc_receive.h
src/research/ccsds-even-better/ccsds/: CMakeLists.txt  ccsds_endian.c  endian.c  endian2.h
src/research/ccsds-even-better/ccsds-even-better/: main.c  sep.h  static_alloc.h  uslp_init.h  uslp_mx.h  uslp_types.h  vc.h
src/research/ccsds-even-better/ccsds/epp/: CMakeLists.txt  epp.c  epp.h  epp_empty.h
src/research/ccsds-even-better/ccsds/epp/include/ccsds/epp/: epp.h  epp_empty.h
src/research/ccsds-even-better/ccsds/epp/src/: epp.c
src/research/ccsds-even-better/ccsds/generic/: CMakeLists.txt
src/research/ccsds-even-better/ccsds/generic/include/ccsds/generic/: buffer.h  ccsds_endian.h  endian.h  endian2.h  fifo.h
src/research/ccsds-even-better/ccsds/generic/src/: buffer.c  ccsds_endian.c  endian.c  endian2.c  fifo.c
src/research/ccsds-even-better/ccsds/uslp/: CMakeLists.txt  buffer.c  buffer.h  map.h  mc.h  pc.h  recieve.h  sap.h  sep.h  uslp_init.h  uslp_mx.h  uslp_types.h  vc_receive.h
src/research/ccsds-even-better/ccsds/uslp/include/ccsds/uslp/: receive.h  sap.h  sep.h  uslp.h  uslp_init.h  uslp_types.h
src/research/ccsds-even-better/ccsds/uslp/src/: event_handler.c  event_handler.h  map.c  map.h  mc.c  mc.h  pc.c  pc.h  receive.c  sap.c  sep.c  static_alloc.c  static_alloc.h  stats.c  uslp_init.c  uslp_mx.c  uslp_mx.h  vc.c  vc.h  vc_receive.c  vc_receive.h
src/research/ccsds-even-better/epp/: epp.c
(+454 files in other folders)
